# Safe-Chain

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  WHITEPAPER.md  init_safechain.sh
.github/workflows/: ci.yml  release.yml  security.yml
crates/secure-shield/: Cargo.toml  Readme.md
crates/secure-shield/src/: errors.rs  lib.rs  prelude.rs  result.rs
crates/secure-shield/src/access/: access_control.rs
crates/secure-shield/src/guards/: mod.rs  reentrancy.rs
crates/secure-shield/src/math/: safe_math.rs
crates/secure-shield/src/pause/: mod.rs  pausable.rs
crates/secure-shield/src/timelock/: mod.rs  timelock.rs
crates/secure-vault/: Cargo.toml
crates/secure-vault/src/: vault.rs
crates/secure-vault/tests/: integration.rs
docs/: architecture.md  auditing-guide.md  threat-model.md
docs/examples/: secure-vault.md
scripts/: clippy.sh  coverage.sh  fmt.sh  test.sh
